--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="modal" id="connexion">
+
         <section class="auth-container">
 
             <div [ngClass]="(isLogin==true) ? '' : 'register' " class="auth-container_block">
@@ -20,8 +20,9 @@
                     }}
                 </p>
                 
-        <a href="#annuler" class="btn closebtn"> Annuler </a>
+        <a routerLink="/" class="btn closebtn"> Retour </a>
             </div>
 
         </section>
-    </div>
+
+        <img src="../../../assets/images/tombereau.png" alt="poubelles">
