--- a/src/app/components/home/accueil/accueil.component.html
+++ b/src/app/components/home/accueil/accueil.component.html
@@ -2,12 +2,11 @@
     <div class="bloc_vert"></div>
     <img class="telephone" src="../../../../assets/images/iphone_frame.png" alt="telephone">
     <h1 class="title_accueil">BENECO,<br> UNE COMMUNAUTE <br> AUTOUR DES DECHETS.</h1>
-
-    <a class="button_redirect_user" href="">Je tri mes déchets</a>
-    <a class="button_redirect_eboueur" href="">Je suis un éboueur</a>
-
+    <h4 class="subtitle_accueil">Ben gagne du temps, et fait gagner du temps aux éboueurs. Faites comme Ben !</h4>
+    <a class="button_redirect_user" routerLink="/inscription">Je tri mes déchets</a>
+    <a class="button_redirect_eboueur" routerLink="/connexion">Je suis un éboueur</a>
     
 
-    <p class="reseaux_sociaux">trouvez nous sur ...</p>
+    <p class="reseaux_sociaux">Retrouvez nous sur <i class="fi fi-brands-facebook"></i></p>
       
 </div>
