--- a/src/app/components/home/accueil/accueil.component.html
+++ b/src/app/components/home/accueil/accueil.component.html
@@ -1,12 +1,12 @@
 <div id="accueil">
     <div class="bloc_vert"></div>
     <img class="telephone" src="../../../../assets/images/iphone_frame.png" alt="telephone">
-    <h1 class="title_accueil">BENECO,<br> UNE COMMUNAUTE <br> AUTOUR DES DECHETS.</h1>
+    <h1 class="title_accueil animate-charcter">BENECO,<br> UNE COMMUNAUTE <br> AUTOUR DES DECHETS.</h1>
     <h4 class="subtitle_accueil">Ben gagne du temps, et fait gagner du temps aux éboueurs. Faites comme Ben !</h4>
     <a class="button_redirect_user" routerLink="/inscription">Je tri mes déchets</a>
-    <a class="button_redirect_eboueur" routerLink="/connexion">Je suis un éboueur</a>
+    <a class="button_redirect_eboueur" routerLink="/connexion">MON ESPACE PRO</a>
     
 
-    <p class="reseaux_sociaux">Retrouvez nous sur <i class="fi fi-brands-facebook"></i></p>
+    <p class="reseaux_sociaux">Retrouvez nous sur <i class="fi fi-brands-facebook"></i><i class="fi fi-brands-twitter"></i><i class="fi fi-brands-snapchat"></i></p>
       
 </div>
