--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
         <li><button (click)="toggleTheme()" class="button_darkmode">{{themehtml}}</button></li>
         <li><a href="#declaration" class="btn openbtn">Déclarer un problème</a></li>
         <li><a class="simple_button" routerLink="/mention-legal">Mentions Légales</a></li>
-        <li><a href="/connexion" class="btn openbtn green_button">Connexion</a></li>
+        <li><a href="/connexion" class="btn openbtn green_button">ESPACE PRO</a></li>
         <li><a class="btn openbtn"></a></li>
 
     </ul>
