--- a/src/app/components/home/accueil/accueil.component.html
+++ b/src/app/components/home/accueil/accueil.component.html
@@ -1,12 +1,23 @@
 <div id="accueil">
-    <div class="bloc_vert"></div>
-    <img class="telephone" src="../../../../assets/images/iphone_frame.png" alt="telephone">
-    <h1 class="title_accueil animate-charcter">UNE <br> COMMUNAUTE <br> AUTOUR DES DECHETS.</h1>
-    <h4 class="subtitle_accueil">Ben gagne du temps, et fait gagner du temps aux éboueurs. Faites comme Ben !</h4>
-    <a class="button_redirect_user" routerLink="/inscription">En savoir plus ...</a>
-    <a class="button_redirect_eboueur" routerLink="/connexion">MON ESPACE MEMBRE</a>
-    
+    <div class="bloc_vert">
+        <div class="text_acceuil">
+            <h1 class="title_accueil animate-charcter">UNE <br> COMMUNAUTE <br> AUTOUR DES DECHETS.</h1>
+            <h4 class="subtitle_accueil">
+                Ben gagne du temps, et fait gagner du temps aux éboueurs. Faites comme Ben !
+            </h4>
+            <div class="dispay_button">
+                <a class="button_redirect_user" routerLink="/inscription">En savoir plus ...</a>
+                <a class="button_redirect_eboueur" routerLink="/connexion">MON ESPACE MEMBRE</a>
+            </div>
+        </div>
+    </div>
 
-    <p class="reseaux_sociaux">Retrouvez nous sur <a href="https://facebook.com/"><i class="fi fi-brands-facebook"></i></a><a href="https://twitter.com/"><i class="fi fi-brands-twitter"></i></a><a href="https://accounts.snapchat.com"><i class="fi fi-brands-snapchat"></i></a></p>
-      
+    <img class="telephone" src="../../../../assets/images/iphone_frame.png" alt="telephone">
+
+    <p class="reseaux_sociaux">Retrouvez nous sur
+        <a href="https://facebook.com/"><i class="fi fi-brands-facebook"></i></a>
+        <a href="https://twitter.com/"><i class="fi fi-brands-twitter"></i></a>
+        <a href="https://accounts.snapchat.com"><i class="fi fi-brands-snapchat"></i></a>
+    </p>
+
 </div>
