--- a/src/app/components/home/accueil/accueil.component.css
+++ b/src/app/components/home/accueil/accueil.component.css
@@ -4,26 +4,40 @@
 #accueil{
     position: fixed;
     width: 100%;
-    height: 100vh;
 }
 .bloc_vert{
-    width: 200%;
-    height: 800px;
+    width: 108%;
+    height: 600px;
     background-color: #5eda96;
     background-image: linear-gradient(135deg, #5eda96 0%, #8186da 100%);
-    
-    
     position: absolute;
-    top: -200px;
+    top: -100px;
+    left: -20px;
     border-radius: 100px;
-    transform : rotate(-5deg);
+    transform: rotate(-5deg);
+}
+.dispay_button{
+    display: flex;
+    width: fit-content;
+}
+.text_acceuil{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 38%;
+    left: 10%;
+    transform: rotate(5deg);
+    width: 50%;
+    height: 328px;
+    justify-content: space-between;
 }
 .telephone{
     position: absolute;
-    width: 40%;
-    right: 4%;
-    top: 17%;
-    animation: float 6s ease-in-out infinite;
+    width: 550px;
+    right: 50px;
+    top: 119px;
+    animation: float 2s ease-in-out infinite;
+    transform: rotate(5deg);
 }
 
 @keyframes float {
@@ -41,16 +55,10 @@
 .title_accueil{
     font-family: 'Fredoka One', cursive;
     color: white;
-    position: absolute;
-    top: 25%;
-    left: 10%;
-    font-size: 50px;
+    font-size: 300%;
 }
 .subtitle_accueil{
     color: rgb(255, 255, 255);
-    position: absolute;
-    top: 50%;
-    left: 10%;
     font-size: 15px;
 }
 
@@ -97,27 +105,25 @@
     margin-right: 5px;
 }
 .button_redirect_user{
-    position: absolute;
     background-color: rgb(255, 255, 255);
     color: black;
-    top: 59%;
-    left: 227px;
     border-radius: 50px;
     padding: 11px;
     font-weight: 600;
+    width: fit-content;
+    margin-right: 10px;
 }
 .button_redirect_user:hover{
     transform: scale(1.1);
 }
 .button_redirect_eboueur{
-    position: absolute;
     background-color:rgb(94, 104, 90);
     color: white;
-    top: 59%;
-    left: 400px;
     border-radius: 50px;
     padding: 11px;
     font-weight: 600;
+    width: fit-content;
+
 }
 .button_redirect_eboueur:hover{
     transform: scale(1.1);
@@ -126,200 +132,34 @@
 a{
     text-decoration: none;
 }
-@media screen and (max-width: 1500px) {
-    .telephone {
-        top: 28%;
-    }
-}
-@media screen and (max-width: 1400px) {
-    .telephone {
-        top: 28%;
-    }
-    .title_accueil{
-        font-size: 45px;
-        top: 28%;
-    }
-    .subtitle_accueil{
-        font-size: 12px;
-        top: 52%;
-    }
-    .button_redirect_user{
-        left: 196px;
-        top: 65%;
-    }
-    .button_redirect_eboueur{
-       left: 369px;
-       top: 65%;
-    }
-}
 
-@media screen and (max-width: 1238px) {
-    .telephone {
-        top: 40%;
-        right: 16px;
-    }
+@media screen and (max-width: 1359px) {
+  .telephone{
+    position: absolute;
+    width: 381px;
+    right: 24px;
+    top: 228px;
+    animation: float 2s ease-in-out infinite;
+    transform: rotate(5deg);
+  }
 }
-
-@media screen and (max-width: 1146px) {
-    .telephone {
-        top: 37%;
-        width: 43%;
-        right: 19px;
+@media screen and (max-width: 600px) {
+    .telephone{
+        position: absolute;
+        width: 381px;
+        top: 487px;
+        animation: float 2s ease-in-out infinite;
+        transform: rotate(5deg);
     }
-    .title_accueil{
-        font-size: 36px;
-        top: 28%;
-    }
-    .subtitle_accueil{
-        font-size: 11px;
-        top: 47%;
-    }
-    .button_redirect_user{
-        left: 146px;
-        top: 60%;
-    }
-    .button_redirect_eboueur{
-        left: 327px;
-        top: 60%;
-    }
+    .text_acceuil{
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 38%;
+        left: 10%;
+        transform: rotate(5deg);
+        width: 78%;
+        height: 328px;
+        justify-content: space-between;
 }
-
-@media screen and (max-width: 1030px) {
-    .telephone {
-        top: 51%;
-        width: 42%;
-        right: 37%;
     }
-    .title_accueil{
-        font-size: 45px;
-        top: 18%;
-    }
-    .subtitle_accueil{
-        font-size: 14px;
-        top: 41%;
-    }
-    .button_redirect_user{
-        left: 523px;
-        top: 58%;
-    }
-    .button_redirect_eboueur{
-        left: 691px;
-        top: 58%;
-    }
-    .reseaux_sociaux{
-        bottom: 21%;
-        left: 70%;
-        transform: rotate(-5deg);
-    }
-}
-
-@media screen and (max-width: 936px) {
-    .telephone {
-        top: 51%;
-        width: 49%;
-        right: 37%;
-    }
-    .title_accueil{
-        font-size: 45px;
-        top: 18%;
-    }
-    .subtitle_accueil{
-        font-size: 14px;
-        top: 41%;
-    }
-    .button_redirect_user{
-        left: 434px;
-        top: 60%;
-    }
-    .button_redirect_eboueur{
-        left: 434px;
-        top: 54%;
-    }
-    .reseaux_sociaux{
-        bottom: 21%;
-        left: 70%;
-        transform: rotate(-5deg);
-    }
-}
-
-@media screen and (max-width: 718px) {
-    .telephone {
-        top: 55%;
-        width: 56%;
-        right: 31%;
-    }
-    .reseaux_sociaux{
-        left: 66%;
-    }
-    .button_redirect_user{
-        left: 396px;
-        top: 60%;
-    }
-    .button_redirect_eboueur{
-        left: 396px;
-        top: 53%;
-    }
-}
-@media screen and (max-width: 676px) {
-    .telephone {
-        top: 55%;
-        width: 56%;
-        right: 31%;
-    }
-    .reseaux_sociaux{
-        left: 66%;
-    }
-    .button_redirect_user{
-        left: 245px;
-    }
-    .button_redirect_eboueur{
-        left: 245px;
-    }
-}
-@media screen and (max-width: 660px) {
-    .button_redirect_user{
-        left: 315px;
-    }
-    .button_redirect_eboueur{
-        left: 315px;
-    }
-    .reseaux_sociaux{
-        font-size: small;
-    }
-}
-@media screen and (max-width: 500px) {
-    .telephone {
-        top: 48%;
-        width: 85%;
-        right: 4%;
-    }
-    .title_accueil{
-        font-size: 37px;
-        top: 19%;
-        text-align: center;
-        left: 33px;
-    }
-    .subtitle_accueil{
-        font-size: 13px;
-        top: 37%;
-        text-align: center;
-        left: 9px;
-    }
-    .button_redirect_user{
-        left: 295px;
-        top: 48%;
-        padding: 7px;
-        font-size: 13px;
-    }
-    .button_redirect_eboueur{
-        left: 295px;
-        top: 53%;
-        padding: 7px;
-        font-size: 13px;
-    }
-    .reseaux_sociaux{
-        bottom: 9%;
-        left: 70%;
-        transform: rotate(-28deg);
-    }
-}
