correction onSubmit form

--- a/src/app/components/auth/auth.component.css
+++ b/src/app/components/auth/auth.component.css
@@ -146,7 +146,7 @@ input, button {
     all: unset;
 }
 
-input[type='text'] {
+input[type='text'],input[type='password']  {
     padding: 10px;
     border-radius: 1rem;
     background-color: #ffffffc2;
