--- a/src/app/components/auth/form-register/form-register.component.html
+++ b/src/app/components/auth/form-register/form-register.component.html
@@ -11,7 +11,7 @@
     <div class="auth-form_input-block">
         <input id="email" name="email" ngModel #email="ngModel" type="text" placeholder="Email *" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
     </div>
-    <div *ngIf="email.invalid && email.touched">
+    <div *ngIf="email.invalid && email.touched || isSubmitted">
         <p class="error" *ngIf="email.errors?.['required']">
             Veuillez renseigner un mail 
         </p>
@@ -31,7 +31,7 @@
         required min="6"
         >
     </div>
-    <div *ngIf="password.invalid && password.touched">
+    <div *ngIf="password.invalid && password.touched || isSubmitted">
         <p class="error" *ngIf="password.errors?.['required']">
             Vous devez renseigner un mot de passe
         </p>
@@ -49,7 +49,7 @@
         type="password"
         placeholder="Confirmation du mot de passe *">
     </div>
-    <div *ngIf="password.value != passwordConfirm.value && (passwordConfirm.touched || password.touched) ">
+    <div *ngIf="password.value != passwordConfirm.value && (passwordConfirm.touched || password.touched) || isSubmitted">
         <p class="error">Les deux mots de passe doivent être identique</p>
     </div>
     <!-- CGU -->
@@ -60,6 +60,6 @@
         <input type="checkbox" id="cgu" name="cgu" ngModel #cgu="ngModel" required>
     </div>
 
-    <button type="submit">Je m'inscris ! </button>
+    <button (click)="isSubmitted = true" type="submit">Je m'inscris ! </button>
 
 </form>
