--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="app"  [ngClass]="colorMode">
     <app-header (newThemeEvent)="getTheme($event)"></app-header>
-    <app-map [filterParam]="currentFilter"></app-map>
-    <app-filters-bennes (getFilterBenne)="getFilter($event)"></app-filters-bennes>
+    <app-map [filterParam]="currentFilter" [filterParamType]="currentFilterType"></app-map>
+    <app-filters-bennes (getFilterBenne)="getFilter($event)" (getFilterType)="getFilterType($event)"></app-filters-bennes>
     <app-declaration></app-declaration>
     <app-auth></app-auth>
 </div>
