finition parti admin

--- a/src/app/modules/admin/eboueur/eboueur.component.html
+++ b/src/app/modules/admin/eboueur/eboueur.component.html
@@ -8,6 +8,7 @@
 	
 	<thead>
 		<tr>
+			<th>ID</th>
 			<th>Email</th>
 			<th>Prénom</th>
 			<th>Nom</th>
@@ -18,12 +19,12 @@
 	<tbody>
         
 		<tr *ngFor="let garbageCollector of garbageCollectors">
+			<td>{{ garbageCollector.id }}</td>
 			<td>{{ garbageCollector.email }}</td>
 			<td>{{ garbageCollector?.first_name }}</td>
 			<td>{{ garbageCollector?.last_name }}</td>
 			<td><button (click)="redirectEdit(garbageCollector.id)" class="btn edit">Modifier</button></td>
-			<td><button class="btn delete">Supprimer</button></td>
-			
+			<td><button (click)="remove(garbageCollector.id)" class="btn delete">Supprimer</button></td>			
 		</tr>
 		
 	</tbody>
