--- a/src/app/components/auth/form-login/form-login.component.html
+++ b/src/app/components/auth/form-login/form-login.component.html
@@ -19,6 +19,11 @@
         </p>
     </div>
 
-    <button (click)="isSubmitted = true" type="submit">Je me connecte !</button>
+    <p [ngStyle]="{'visibility': formUnknownError || isSubmitted ? 'visible' : 'hidden'}" 
+    [ngClass]="formUnknownError ? 'error' : ''">
+        <ng-container *ngIf="formUnknownError">Identifiant invalide</ng-container>
+        <ng-container *ngIf="isSubmitted">Connexion en cours</ng-container>
+    </p>
 
+    <button [disabled]="isSubmitted" (click)="isSubmitted = true" type="submit">Je me connecte !</button>
 </form>
